# aibom-generator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
HF_files/aibom-generator/docs/: aibom-field-mapping.md
HF_files/aibom-generator/src/aibom-generator/: api.py
docs/aibom-field-mapping/: README.md
src/: cli.py  config.py  main.py
src/controllers/: cli_controller.py  web_controller.py
src/models/: __init__.py  config_parsing.py  extractor.py  field_registry.json  gguf_metadata.py  model_file_extractors.py  registry.py  safetensors_metadata.py  schemas.py  scoring.py  service.py
src/schemas/: bom-1.7.schema.json
src/static/css/: style.css
src/static/js/: script.js
src/templates/: error.html  index.html  result.html
src/templates/includes/: footer.html  header.html
src/utils/: __init__.py  analytics.py  captcha.py  cleanup_utils.py  formatter.py  license_utils.py  rate_limiting.py  summarizer.py  validation.py
tests/: conftest.py  doubles.py  test_aibom_hyperparameters.py  test_gguf_metadata.py  test_hyperparameter_wiring.py  test_license_utils.py  test_model_file_extraction.py  test_purl_construction.py  test_safetensors_metadata.py  test_service.py  test_validation.py
tests/fixtures/: __init__.py
